standardize function calls and improve Lexer speed